# SnakeGame

./: CMakeLists.txt
src/: apple.cpp  apple.hpp  constants.hpp  doubly_linked_list.cpp  doubly_linked_list.hpp  field.cpp  field.hpp  main.cpp  node.cpp  node.hpp  random_selector.cpp  snake.cpp  snake.hpp  utilities.hpp
